# python-oop-project-101

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_ad_validator.py  test_dict_schema.py  test_list_schema.py  test_number_schema.py  test_string_schema.py  test_validator.py
validator/: __init__.py  validatar_registy.py  validator.py  validator_registry.py
validator/schemas/: __init__.py  base.py  dict_schema.py  list_schema.py  number_schema.py  string_schema.py
