[project]
name = "hexlet-code"
version = "0.1.0"
description = "Fluent validation library for Python with chainable schema definitions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
force-single-line = false

[tool.hatch.build.targets.wheel]
packages = ["validator"]

[project.dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
]
